# Point-cloud-compression-by-RNN

./: README.md
network/: dataset.py  decoder.py  encoder.py  network.py  train.py
network/Evaluation/: enc_dec.sh  rearr2recon.sh  rearrange.sh
network/Evaluation/raw_decompose/rotation/: akagi_01_2017-11-11_1510797722_free_download_1021_roation.txt  akagi_01_2017-11-11_1510797722_free_download_1081_roation.txt  akagi_01_2017-11-11_1510797722_free_download_1141_roation.txt  akagi_01_2017-11-11_1510797722_free_download_1201_roation.txt  akagi_01_2017-11-11_1510797722_free_download_121_roation.txt  akagi_01_2017-11-11_1510797722_free_download_1261_roation.txt  akagi_01_2017-11-11_1510797722_free_download_1321_roation.txt  akagi_01_2017-11-11_1510797722_free_download_1381_roation.txt  akagi_01_2017-11-11_1510797722_free_download_1441_roation.txt  akagi_01_2017-11-11_1510797722_free_download_1501_roation.txt  akagi_01_2017-11-11_1510797722_free_download_1561_roation.txt  akagi_01_2017-11-11_1510797722_free_download_1621_roation.txt  akagi_01_2017-11-11_1510797722_free_download_1681_roation.txt  akagi_01_2017-11-11_1510797722_free_download_1741_roation.txt  akagi_01_2017-11-11_1510797722_free_download_1801_roation.txt  akagi_01_2017-11-11_1510797722_free_download_181_roation.txt  akagi_01_2017-11-11_1510797722_free_download_1861_roation.txt  akagi_01_2017-11-11_1510797722_free_download_1_roation.txt  akagi_01_2017-11-11_1510797722_free_download_241_roation.txt  akagi_01_2017-11-11_1510797722_free_download_301_roation.txt  akagi_01_2017-11-11_1510797722_free_download_361_roation.txt  akagi_01_2017-11-11_1510797722_free_download_421_roation.txt  akagi_01_2017-11-11_1510797722_free_download_481_roation.txt  akagi_01_2017-11-11_1510797722_free_download_541_roation.txt  akagi_01_2017-11-11_1510797722_free_download_601_roation.txt  akagi_01_2017-11-11_1510797722_free_download_61_roation.txt  (+6 more)
tools/src/velodyne2image/: CMakeLists.txt  package.xml
tools/src/velodyne2image/src/: driver.h  image2bag.cpp  image2packet.cpp  local_calibration.cpp  packet2image.cpp  singlePCDextraction.cpp
training_data/: extract.sh
